# sort_nazonazo_rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  main
dics/: TOEIC.dic
dics/fr/: fr.dic  fr2.dic
dictionaries/: english.toml  esperanto.toml  french.toml  german.toml  italian.toml  japanese.toml  russian.toml
full_dic/fr/: fr-full.dic
nazonazo_macros/: Cargo.toml
nazonazo_macros/src/: lib.rs
src/: bot.rs  command.rs  commands.rs  dictionary.rs  error.rs  main.rs  settings.rs  sort.rs
src/commands/: executors.rs  facade.rs  parser.rs
src/settings/: permission.rs  prefix.rs
