[package]
name = "mitama-test-bot"
version = "0.1.0"
authors = ["Mitama <loligothick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7"
itertools = "0.8.0"
indexmap = "1.2.0"
rand = "0.7.0"
threadpool = "1.7.1"
lazy_static = "1.4.0"
