[package]
name = "mitama-test-bot"
version = "0.1.0"
authors = ["Mitama <loligothick@gmail.com>"]
edition = "2018"

[dependencies]
serenity = "0.7"
itertools = "0.8.0"
indexmap = "1.2.0"
rand = "0.7.0"
threadpool = "1.7.1"
lazy_static = "1.4.0"
tokio = { git = "https://github.com/tokio-rs/tokio" }
serde = ">=1.0"
serde_derive = ">=1.0"
toml = "0.5"
unicode-segmentation = "1.3.0"
regex = "1.3.1"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
if_chain = "1.0.0"
#nazonazo_macros = { path = "nazonazo_macros" }

[dependencies.clap]
version = "2.33.0"
features = [ "suggestions", "color" ]
